--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ author:
   github: ritijjain/pudhina-fresh # GitHub username, used for GitHub icon on the top right
   linkedin: ritijjain # Your LinkedIn profile url name, used for LinkedIn icon on the top right
   email: example@example.com # Used for email icon on the top right
-  homepage: colomer361.github.io # This links to your name in post meta
+  homepage: # This links to your name in post meta
   twitter: # Twitter username, used for Twitter Card Analytics 
 
 disqus_name: # Setting this will turn on Disqus comments
