--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Colomer361 # Shown in header on pages with full_logo: true
-short_logo: Colomer361. # Shown in header on all pages by default unless full_logo: true is set
+short_logo: Colomer361 # Shown in header on all pages by default unless full_logo: true is set
 description: > # The description for your site
   A minimal yet feature-rich Jekyll theme made for personal websites and blogs.
 url: "" # Site base URL
